[package]
name = "dome-key-map"
version = "0.0.1"

[dependencies]
autopilot = "0.1.7"
cocoa = "0.18.0"
combine = "3.4.0"
core-graphics = "0.17.2"
foreign-types = "0.3.2"
getopts = "0.2.18"
libc = "0.2.43"
log = "0.4.5"
objc = "0.2.5"
serde = "1.0.58"
serde_derive = "1.0.58"
stderrlog = "0.4.1"
xdg = "2.1.0"

[build-dependencies]
cbindgen = "0.6.6"

[lib]
crate-type = ["staticlib"]

[profile.release]
lto = true
