[package]
name = "dome-key-map"
version = "0.1.0"

[dependencies]
autopilot = "0.1.7"
chrono = "0.4.6"
combine = "3.4.0"
core-graphics = "0.17.2"
error-chain = "0.12.0"
exitcode = "1.1.2"
getopts = "0.2.18"
libc = "0.2.43"
log = "0.4.5"
magic-crypt = "2.1.2"
quick-error = "1.2.2"
serde = "1.0.58"
serde_derive = "1.0.58"
stderrlog = "0.4.1"
toml = "0.4.8"
xdg = "2.1.0"

[build-dependencies]
cbindgen = "0.6.6"

[lib]
crate-type = ["staticlib"]

[profile.release]
lto = true
